--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,10 @@
-create_file:
-  image: alpine
-  script:
-    - echo: "Building ..."
-    - mkdir build
-    - touch build/somefile.txt
+name: ci
+
+on: push
+
+  create_file:
+    image: alpine
+    script:
+      - echo: "Building ..."
+      - mkdir build
+      - touch build/somefile.txt
